# twitch-websocket-server

./: .env.example  .gitignore  DOCKERFILE  Dockerfile  README.md  chat_log.json  docker-compose.debug.yml  docker-compose.yml  firestore2json.py  firestore_to_json.py  firestore_to_supabase.py  hello.py  model.vw  output.json  output_1.json  profanity_dataset.json  pyproject.toml  requirements.txt  secret_manager.py  social_media_toxicity_dataset.json  spinner.py  todo.md  websocket.py
app/: chat_preprocessor.py  config.py  database_handler.py  main.py  toxicity_predictor.py  twitch_api.py
