[project]
name = "twitch-websocket-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "asyncio>=3.4.3",
    "firebase-admin>=6.6.0",
    "google-cloud-secret-manager>=2.22.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "websockets>=14.1",
]
