[project]
name = "twitch2firebase-websocket-server"
version = "0.1.0"
description = "A websocket server that listens to Twitch chat and sends messages to Firebase."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "asyncio>=3.4.3",
    "firebase-admin>=6.6.0",
    "google-cloud-secret-manager>=2.22.0",
    "pprintpp>=0.4.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "websockets>=14.1",
]
